// Vitest Snapshot v1

exports[`plugins/tsLoader > should set include/exclude 1`] = `
{
  "module": {
    "rules": [
      {
        "exclude": [
          "src/**/*.js",
        ],
        "include": [
          {
            "and": [
              /builder/web-builder,
              {
                "not": /node_modules/,
              },
            ],
          },
          "src/**/*.ts",
        ],
        "test": /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": /babel-loader/lib/index.js,
            "options": {
              "presets": [
                [
                  /cli/babel-preset-app/dist/js/node/index.js,
                  {
                    "appDirectory": /builder/web-builder,
                    "metaName": "modern-js",
                    "target": "client",
                    "useBuiltIns": undefined,
                    "useTsLoader": true,
                    "userBabelConfig": undefined,
                  },
                ],
              ],
            },
          },
          {
            "loader": /ts-loader/index.js,
            "options": {
              "allowTsInNodeModules": true,
              "compilerOptions": {
                "module": 99,
                "target": 99,
              },
              "transpileOnly": true,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/tsLoader > should set ts-loader 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              /builder/web-builder,
              {
                "not": /node_modules/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": /babel-loader/lib/index.js,
            "options": {
              "presets": [
                [
                  /cli/babel-preset-app/dist/js/node/index.js,
                  {
                    "appDirectory": /builder/web-builder,
                    "metaName": "modern-js",
                    "target": "client",
                    "useBuiltIns": undefined,
                    "useTsLoader": true,
                    "userBabelConfig": undefined,
                  },
                ],
              ],
            },
          },
          {
            "loader": /ts-loader/index.js,
            "options": {
              "allowTsInNodeModules": true,
              "compilerOptions": {
                "module": 99,
                "target": 99,
              },
              "transpileOnly": true,
            },
          },
        ],
      },
    ],
  },
}
`;
